<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item1"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:text="@string/item2" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button2"
        android:layout_below="@+id/textView"
        android:text="@string/item3"/>

    <ImageButton
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox"
        android:layout_marginTop="17dp"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/image"
        android:layout_below="@+id/checkbox"
        android:layout_marginTop="20dp"
        android:text="@string/item4" />
    <EditText
        android:id="@+id/textView2"
        android:layout_width="match_parent"

        android:layout_alignParentEnd="true"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="15dp"
        android:text="@string/item5" />
</RelativeLayout>