<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/send_button"
        >

        <ListView
            android:id="@+id/theList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/item13" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/send_button"
        android:layout_toLeftOf="@id/recieve_button"
        android:layout_alignParentBottom="true"
        android:hint="@string/item15" />

    <Button
        android:id="@+id/recieve_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/item14" />
</RelativeLayout>